--- a/style.css
+++ b/style.css
@@ -1,11 +1,106 @@
 * {
     box-sizing: border-box;
 }
+body {
+    font-family: 'Merriweather', serif;
+}
 .container {
     max-width: 860px;
     margin: 0 auto;
     padding: 1rem;
+}
+ul {
+    padding: 0;
+}
+h2 {
+    font-size: .95em; 
+}
+p {
+    font-size: .75em;
+}
+label {
+    color: 55687A;
+}
+input[type="radio"]:checked {
+    background-color: #489FF9;
+  }
+input:focus, textarea:focus {
+    outline: 2px solid #46698B;
+}
+nav.container p {
+    font-size: .80em;
+}
+fieldset {
+    border: none;
+}
+nav.container {
+    border-bottom: 4px solid #2D3945;
+}
+main.container {
+    border-top: 2px solid #2D3945;
+    margin-top: 4px;
+}
+#zip {
+    margin-bottom: 20px;
+}
+#newsletter {
+    border-top: 2px solid #2D3945;
+    padding-top: 20px;
+    margin-top: 0px;
+}
+header, #copyright {
+    text-align: center;
+}
+#logo-text {
+    text-transform: uppercase;
+    color: white;
+}
+#logo .container {
+    background-color: #2D3945;
+    max-width: 100%;
+ }
+.required {
+    font-size: .65em;
+    text-align: right;
+}
+#copyright {
+    font-size: .75em;
+    color: #B1B5B9
+}
+h2 {
+    color: #3B4650
+}
+label {
+    font-size: .85em;
+}
+#zip {
+    max-width: 50%;
+}
+input, textarea {
+    background-color: #EFF0F1;
+    border: none;
+    border-radius: 5px;
+    display: block;
+    width: 100%;
+    margin: 5px 0;
+    padding: 8px;
+    font-size: 1.13em;
+    color: black;
     font-family: 'Merriweather', serif;
 }
-
-/* comment */
+textarea {
+    height: 100px;
+    max-width: 100%;
+}
+button {
+    width: 100%;
+    padding: 12px 0;
+    font-size: 18px;
+    background-color: #4EBBB5;
+    color: white;
+    border: none;
+    border-radius: 5px;
+    margin: 24px auto;
+    display: block;
+    cursor: pointer;
+}
